--- a/language/fr-FR/fr-FR.mod_etdcontact.sys.ini
+++ b/language/fr-FR/fr-FR.mod_etdcontact.sys.ini
@@ -1,3 +1,4 @@
 ; @copyright	Copyright (C) 2016 ETD Solutions
 
+MOD_ETDCONTACT="ETD Contact"
 MOD_ETDCONTACT_XML_DESCRIPTION = "Module de gestion d'un contact"
