--- a/language/fr-FR/fr-FR.mod_etdcontact.ini
+++ b/language/fr-FR/fr-FR.mod_etdcontact.ini
@@ -1,5 +1,6 @@
 ; @copyright	Copyright (C) 2016 ETD Solutions
 
+MOD_ETDCONTACT="ETD Contact"
 MOD_ETDCONTACT_XML_DESCRIPTION = "Module de gestion d'un contact"
 MOD_ETDCONTACT_FIELD_CONTACT_LABEL = "Contact à afficher"
 MOD_ETDCONTACT_FIELD_CONTACT_DESC = "Contact dont les informations seront affichées"
